[tool.poetry]
name = "langchains"
version = "0.0.6"
description = "LangChain chains for use with LLMs"
authors = ["Anders Fischer-Nielsen <andersfischern@me.com>"]
readme = "README.md"
packages = [{include = "langchains"}]

[tool.poetry.dependencies]
python = "^3.11"
presidio-analyzer = "^2.2.33"
presidio-anonymizer = "^2.2.33"
langchain = "^0.0.275"
en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.6.0/en_core_web_lg-3.6.0.tar.gz"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
